<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SOUNDAGGIO</string>

    <string name="enable_bluetooth">You must turn Bluetooth on, to use this app</string>
    <string name="grant_location_permission">You must grant the location permission</string>
    <string name="grant_code_permission">You must grant the code permission</string>

    <string name="text_to_send">Text to send:</string>
    <string name="flash">Flash</string>
    <string name="marquee">Marquee</string>
    <string name="speed">Speed:</string>
    <string name="mode">Mode:</string>
    <string name="mode_left">Left</string>
    <string name="mode_right">Right</string>
    <string name="mode_up">Up</string>
    <string name="mode_down">Down</string>
    <string name="mode_fixed">Fixed</string>
    <string name="mode_snowflake">Snowflake</string>
    <string name="mode_picture">Picture</string>
    <string name="mode_animation">Animation</string>
    <string name="mode_laser">Laser</string>
    <string name="send_button">CLEAR</string>
    <string name="send_button_BF">1</string>
    <string name="send_button_89">2</string>
    <string name="send_button_3B">3</string>
    <string name="send_button_CD">4</string>
    <string name="prev_button">PREV</string>
    <string name="pause_button">PAUSE</string>
    <string name="play_button">PLAY</string>
    <string name="next_button">NEXT</string>
    <string name="stop_button">STOP</string>
    <string name="reset_button">RESET</string>
    <string name="fade_left">L-Fade</string>
    <string name="fade_right">R-Fade</string>
</resources>
