<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="545dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/text_to_send"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webview" />

    <Spinner
        android:id="@+id/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_to_send"
        app:layout_constraintTop_toBottomOf="@+id/webview" />

    <Spinner
        android:id="@+id/mode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/speed"
        app:layout_constraintTop_toBottomOf="@+id/text_to_send" />

    <CheckBox
        android:id="@+id/flash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/flash"
        app:layout_constraintEnd_toStartOf="@+id/marquee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mode" />

    <CheckBox
        android:id="@+id/marquee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/marquee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flash"
        app:layout_constraintTop_toBottomOf="@+id/mode" />

    <Button
        android:id="@+id/send_button_BF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_button_BF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/send_button_89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flash" />

    <Button
        android:id="@+id/send_button_89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_button_89"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/send_button_3B"
        app:layout_constraintStart_toEndOf="@+id/send_button_BF"
        app:layout_constraintTop_toBottomOf="@+id/flash" />

    <Button
        android:id="@+id/send_button_3B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_button_3B"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/send_button_CD"
        app:layout_constraintStart_toEndOf="@+id/send_button_89"
        app:layout_constraintTop_toBottomOf="@+id/flash" />

    <Button
        android:id="@+id/send_button_CD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_button_CD"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/send_button_3B"
        app:layout_constraintTop_toBottomOf="@+id/flash" />
</android.support.constraint.ConstraintLayout>
